2014-03-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Drop sending of signature keys to the client. These information are
	not used on OpenVAS Manager side. The original idea of knowledge about
	NVT signer has turned out to be of little value because feeds are
	typically not aggregated from different sources but rather provided
	from a single source.

	* src/comm.c (send_plug_info): Do not send the signature keys any more.

2014-03-21  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Add --gnutls-priorities option for the scanner.

	* src/openvassd.c (loading_client_handle, scanner_thread): Adjust
	ovas_context_attach() calls.
	(init_ssl_ctx): Add priority parameter.
	(main): Add --gnutls-priority option, defaulting to normal. Adjust
	init_ssl_ctx() call.

	* doc/openvassd.8.in: Update for the new option.

2014-03-20  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (loading_client_handle, scanner_thread): Adjust
	ovas_scanner_context_attach call.
	(ssl_ver_to_encaps): Delete function.
	(init_ssl_ctx): Always create ovas_scanner_ctx with
	OPENVAS_ENCAPS_TLScustom.

2014-03-19  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Report current and total number of loading plugins to clients when
	scanner is still loading.

	* src/comm.c (comm_loading): Send current and total loading values with
	SCANNER_LOADING otp command.

	* src/openvassd.c: Delete include of removed file.
	(loading_handler_start, loading_handler_stop): Initialize and destroy
	loading plugins shared memory.

	* src/pluginload.c (init_loading_shm, destroy_loading_shm)
	(current_loading_plugins, total_loading_plugins)
	(set_current_loading_plugins, set_total_loading_plugins): New functions.
	(plugins_reload_from_dir): Update number of currently and total loading
	plugins in the shared memory to be seen by other processes.

	* src/pluginload.h: Add function prototypes.

2014-03-18  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.
